--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "4.17.1",
     "express-validator": "6.12.1",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "6.0.4",
     "nodemon": "2.0.12",
     "uuid": "8.3.2"
